--- a/media-queries.css
+++ b/media-queries.css
@@ -1,8 +1,9 @@
-@media screen and (max-width:500px) {
+@media screen and (max-width: 500px) {
     body {
         text-align: center;
         width: 339px;
     }
+
     .alert-info {
         background-color: lightblue;
         margin: 0.5em auto;
@@ -59,5 +60,70 @@
     footer {
         margin-top: 5em;
     }
+
+}
+
+@media screen and (min-width: 501px) {
+
+    body {
+        position: relative;
+    }
+
+    .alert-info {
+        display: none;
+    }
+
+    h1 {
+        float: left;
+        width: 50%;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    nav ul {
+        display: inline;
+        float: right;
+        margin-bottom: 700px;
+    }
+
+    .nav-links {
+        right: 10px;
+        list-style: none;
+        padding: 0;
+    }
+
+    .nav-links li {
+        display: inline-block;
+        /*margin: 0.5em auto;*/
+        /*padding: 0.75em 0;*/
+        /*width: 83.5%;*/
+    }
+
+    .header-img {
+        width: 890px;
+        height: 305px;
+        margin: 1em auto;
+    }
+
+    .header-img img {
+        width: 100%;
+        height: 100%;
+        /*margin: auto;*/
+        text-align: center;
+    }
+
+    .main, .sub-section {
+        /*text-align: justify;*/
+        /*padding-left: 2.15em;*/
+        margin: 0.5em auto;
+        /*width: 83.5%;*/
+    }
+
+    /*h2, p {*/
+    /*    text-align: left;*/
+    /*}*/
+
+    /*footer {*/
+    /*    margin-top: 5em;*/
+    /*}*/
 
 }
