--- a/media-queries.css
+++ b/media-queries.css
@@ -102,6 +102,7 @@
         width: 890px;
         height: 305px;
         margin: 1em auto;
+        padding-bottom: 5em;
     }
 
     .header-img img {
@@ -114,7 +115,7 @@
     .main, .sub-section {
         /*text-align: justify;*/
         /*padding-left: 2.15em;*/
-        margin: 0.5em auto;
+        margin: 1em auto;
         /*width: 83.5%;*/
     }
 
