--- a/media-queries.css
+++ b/media-queries.css
@@ -82,7 +82,7 @@
     nav ul {
         display: inline;
         float: right;
-        margin-bottom: 700px;
+        /*margin-bottom: 700px;*/
     }
 
     .nav-links {
@@ -99,8 +99,10 @@
     }
 
     .header-img {
+        display: flex;
+        flex-shrink: 1;
         width: 890px;
-        height: 305px;
+        height: 385px;
         margin: 1em auto;
         padding-bottom: 5em;
     }
@@ -108,15 +110,13 @@
     .header-img img {
         width: 100%;
         height: 100%;
-        /*margin: auto;*/
         text-align: center;
     }
 
     .main, .sub-section {
-        /*text-align: justify;*/
-        /*padding-left: 2.15em;*/
+        display: flex;
+        width: 50%;
         margin: 1em auto;
-        /*width: 83.5%;*/
     }
 
     /*h2, p {*/
