--- a/media-queries.css
+++ b/media-queries.css
@@ -67,6 +67,8 @@
 
     body {
         position: relative;
+        width: 890px;
+        margin: auto;
     }
 
     .alert-info {
@@ -104,7 +106,7 @@
         width: 890px;
         height: 385px;
         margin: 1em auto;
-        padding-bottom: 5em;
+        /*padding-bottom: 5em;*/
     }
 
     .header-img img {
@@ -114,17 +116,25 @@
     }
 
     .main, .sub-section {
-        display: flex;
+        float: inherit;
         width: 50%;
         margin: 1em auto;
     }
 
-    /*h2, p {*/
-    /*    text-align: left;*/
-    /*}*/
+    .main {
+        float: left;
+    }
 
-    /*footer {*/
-    /*    margin-top: 5em;*/
-    /*}*/
+    .sub-section {
+        float: right;
+    }
+
+    h2, p {
+        text-align: left;
+    }
+
+    footer {
+        margin-top: 15em;
+    }
 
 }
