--- a/media-queries.css
+++ b/media-queries.css
@@ -9,7 +9,6 @@
         margin: 0.5em auto;
         padding: 0.75em 0;
         border: lightgrey solid 1px;
-        /*width: 83.5%;*/
     }
 
     .alert-info a {
@@ -30,7 +29,6 @@
         background-color: lightgrey;
         margin: 0.5em auto;
         padding: 0.75em 0;
-        /*width: 83.5%;*/
     }
 
     .header-img {
@@ -42,15 +40,11 @@
     .header-img img {
         width: 100%;
         height: 100%;
-        /*margin: auto;*/
         text-align: center;
     }
 
     .main, .sub-section {
-        /*text-align: justify;*/
-        /*padding-left: 2.15em;*/
         margin: 0.5em auto;
-        /*width: 83.5%;*/
     }
 
     h2, p {
@@ -84,7 +78,6 @@
     nav ul {
         display: inline;
         float: right;
-        /*margin-bottom: 700px;*/
     }
 
     .nav-links {
@@ -95,9 +88,8 @@
 
     .nav-links li {
         display: inline-block;
-        /*margin: 0.5em auto;*/
-        /*padding: 0.75em 0;*/
-        /*width: 83.5%;*/
+        margin: 0.5em auto;
+        padding: 0.75em 1em;
     }
 
     .header-img {
@@ -106,7 +98,6 @@
         width: 890px;
         height: 385px;
         margin: 1em auto;
-        /*padding-bottom: 5em;*/
     }
 
     .header-img img {
