--- a/media-queries.css
+++ b/media-queries.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 500px) {
+
     body {
         text-align: center;
         width: 339px;
@@ -42,7 +43,9 @@
         height: 100%;
         text-align: center;
     }
-
+    #desktop_Picture{        /*added "desktop" and "mobile" picture. these do and make zero difference. just want to */
+        display: none;      /*showcase the ability to have multiple pictures and only let them appear at specific sizes*/
+    }
     .main, .sub-section {
         margin: 0.5em auto;
     }
@@ -105,7 +108,8 @@
         height: 100%;
         text-align: center;
     }
-
+    #mobile_Picture{         /*added "desktop" and "mobile" picture. these do and make zero difference. just want to */
+        display: none;      /*showcase the ability to have multiple pictures and only let them appear at specific sizes*/    }
     .main, .sub-section {
 
         margin: 1em auto;
