--- a/media-queries.css
+++ b/media-queries.css
@@ -1,3 +1,35 @@
+/*placed outside to be considered in all formats: D.R.Y. */
+h1 {
+    font-family: 'Open Sans', sans-serif;
+
+}
+.nav-links {
+    list-style: none;
+    padding: 0;
+}
+.header-img img {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+footer p{
+    float: left;
+    width: 53%;
+}
+#social-media-links{
+    float: right;
+    width: 47%;
+    text-align: right;
+
+}
+#social-media-links img{
+    padding: 10px;
+}
+h2, p {
+    text-align: left;
+}
+
+
 @media screen and (max-width: 500px) {
 
     body {
@@ -17,15 +49,6 @@
         color: black;
     }
 
-    h1 {
-        font-family: 'Open Sans', sans-serif;
-    }
-
-    .nav-links {
-        list-style: none;
-        padding: 0;
-    }
-
     .nav-links li {
         background-color: lightgrey;
         margin: 0.5em auto;
@@ -38,20 +61,11 @@
         margin: auto;
     }
 
-    .header-img img {
-        width: 100%;
-        height: 100%;
-        text-align: center;
-    }
     #desktop_Picture{        /*added "desktop" and "mobile" picture. these do and make zero difference. just want to */
         display: none;      /*showcase the ability to have multiple pictures and only let them appear at specific sizes ~DZ */
     }
     .main, .sub-section {
         margin: 0.5em auto;
-    }
-
-    h2, p {
-        text-align: left;
     }
 
     footer {
@@ -75,7 +89,6 @@
     h1 {
         float: left;
         width: 50%;
-        font-family: 'Open Sans', sans-serif;
     }
 
     nav ul {
@@ -85,8 +98,6 @@
 
     .nav-links {
         right: 10px;
-        list-style: none;
-        padding: 0;
     }
 
     .nav-links li {
@@ -103,11 +114,6 @@
         margin: 1em auto;
     }
 
-    .header-img img {
-        width: 100%;
-        height: 100%;
-        text-align: center;
-    }
     #mobile_Picture{         /*added "desktop" and "mobile" picture. these do and make zero difference. just want to */
         display: none;      /*showcase the ability to have multiple pictures and only let them appear at specific sizes ~DZ */
     }
@@ -127,26 +133,8 @@
         width: 30%;
     }
 
-    h2, p {
-        text-align: left;
-    }
-
     footer {
         margin-top: 15em;
     }
 
-}
-/*placed outside to be considered in all formats*/
-footer p{
-    float: left;
-    width: 53%;
-}
-#social-media-links{
-    float: right;
-    width: 47%;
-    text-align: right;
-
-}
-#social-media-links img{
-    padding: 10px;
 }
